--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
-body{
-    color: #fff;
+#loader{
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    background: #fff url('../img/loading.gif') ;
+    background-position: center center;
+    background-repeat: no-repeat;
+    z-index: 9999;
 }
 *{
     padding: 0;
@@ -8,6 +14,14 @@ body{
     box-sizing: border-box;
     font-family: 'Comfortaa', cursive;
 }
+ul{
+    list-style-type: none;
+}
+a{
+    text-decoration: none;
+}
+
+/* Header Part Start*/
 .navbar-nav .nav-link {
     color: #fff;
 }
@@ -71,3 +85,46 @@ header{
     width: 80%;
     vertical-align: middle;
 }                  
+/* Header Part End*/
+
+/* Product page start  */
+#product img{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+#product img:hover {
+    padding: 10px;
+}
+/* Product page end  */
+
+
+/* Footer part Start */
+footer{
+    background: #161b1f;
+    color: #fff;
+}
+footer a{
+    color: #fff;    
+}
+footer ul li{
+    margin: 10px 0px;
+}
+footer a:hover{
+    text-decoration: none;
+}
+footer h2, footer h4{
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+.footer-logo{
+    width: 40px;
+    margin-top: -10px;
+}
+/* Footer part End*/
+
+/* Feature Part */
+.feature-img{
+    width: 100px;
+    margin: 20px 0px;
+}
