--- a/css/about.css
+++ b/css/about.css
@@ -12,9 +12,14 @@ ul {
 a {
   text-decoration: none;
 }
-
+.middle-part {
+  padding-bottom: 30px;
+  
+}
 .about-header-upper {
-  margin-top: 20px;
+  margin: 20px 0px;
+  
+
 }
 .about-header-upper ul {
   display: flex;
@@ -24,53 +29,60 @@ a {
   padding: 0 10px;
 }
 .about-header-upper ul li a {
-  color: white;
+  color: black;
   transition: 0.5s all ease-in-out;
 }
 .about-header-upper a.active {
-  background-color: #fdfeff;
-  color: black;
+  background-color: black;
+  color: white;
   border-radius: 5px;
   padding: 5px;
 }
 .about-header-upper ul li a:hover {
-  background-color: #fdfeff;
-  color: black;
+  background-color: black;
+  color: white;
   border-radius: 5px;
   padding: 5px;
 }
 
 .page-title {
   padding: 13px 0px;
-  color: white;
+  color: black;
 }
 .about-header-lower {
   text-align: center;
-  color: white;
+  color: black;
 }
 .text {
   padding-bottom: 20px;
-  color: white;
+  color: black;
 }
 
-body {
-  background: rgb(0, 196, 204);
+/* body {
+   background: rgb(0, 196, 204);
   background: linear-gradient(
     90deg,
     rgba(0, 196, 204, 1) 0%,
     rgba(57, 125, 216, 1) 48%,
     rgba(116, 52, 230, 1) 91%
-  );
-}
+  ); 
+  background-color: white;
+} */
 
 .body-header {
-  padding-top: 30px;
+  margin: 30px 270px;
+  background-color: black;
+  border-radius: 5px;
   color: white;
+  font-size: larger;
+  /* width: 500px; */
 }
 .team-logo img {
   width: 124px;
   height: 124px;
   margin-top: 60px;
+  border-radius: 100%;
+  box-shadow: 4px 4px 12px 0px #afafaf;
 }
 .line {
   width: 500px;
@@ -95,7 +107,7 @@ body {
   text-align: center;
   border-radius: 10px;
   padding: 20px 20px 20px 20px;
-  /* box-shadow: 4px 4px 12px 0px #afafaf ; */
+  box-shadow: 4px 4px 12px 0px #afafaf;
   transition: 0.5s all ease-in-out;
 }
 .card:hover {
@@ -109,6 +121,10 @@ body {
   margin-bottom: 1em;
   border-radius: 100%;
   box-shadow: 0 13px 26px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.2);
+  transition: 0.5s all ease-in-out;
+}
+.card-image img:hover {
+  transform: scale(1.3);
 }
 
 .card-info .details {
@@ -127,9 +143,17 @@ body {
   height: 40px;
   border-radius: 30px;
   box-shadow: 0 13px 26px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.2);
+  transition: 0.5s all ease-in-out;
 }
+
+.card-social-icons img:hover {
+  transform: scale(1.3);
+}
+/* .about-footer {
+  margin-top: 60px;
+} */
 .footer-menu {
-  margin-top: 20px;
+  margin: 20px;
 }
 .footer-menu ul {
   display: flex;
@@ -140,20 +164,23 @@ body {
 }
 .footer-menu ul li a {
   text-decoration: none;
-  color: white;
+  color: black;
   transition: 0.5s all ease-in-out;
 }
 .footer-menu ul li a:hover {
-  color: yellow;
+  color: white;
+  background-color: black;
+  border-radius: 5px;
+  padding: 5px;
 }
 .footer-copyright {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: white;
+  color: black;
 }
 .footer-copyright a {
-  color: yellow;
+  color: blue;
 }
 .footer-copyright a:hover {
   color: red;
