--- a/css/product.css
+++ b/css/product.css
@@ -16,6 +16,7 @@ a {
 .about-header-upper {
   margin-top: 20px;
   margin-bottom: 20px;
+  background-color: white;
 }
 .about-header-upper ul {
   display: flex;
@@ -74,3 +75,36 @@ img:hover {
 /* .btn {
     position: ;
 } */
+.footer-menu {
+  margin-top: 20px;
+}
+.footer-menu ul {
+  display: flex;
+  justify-content: center;
+}
+.footer-menu ul li {
+  padding: 0 10px;
+}
+.footer-menu ul li a {
+  text-decoration: none;
+  color: black;
+  transition: 0.5s all ease-in-out;
+}
+.footer-menu ul li a:hover {
+  color: white;
+  background-color: black;
+  border-radius: 5px;
+  padding: 5px;
+}
+.footer-copyright {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: black;
+}
+.footer-copyright a {
+  color: blue;
+}
+.footer-copyright a:hover {
+  color: red;
+}
