--- a/css/product.css
+++ b/css/product.css
@@ -28,6 +28,8 @@ a {
 .about-header-upper ul li a {
   color: black;
   transition: 0.5s all ease-in-out;
+  border-radius: 5px;
+  padding: 5px;
 }
 .about-header-upper a.active {
   background-color: black;
@@ -38,8 +40,6 @@ a {
 .about-header-upper ul li a:hover {
   background-color: black;
   color: white;
-  border-radius: 5px;
-  padding: 5px;
 }
 .title {
   text-align: center;
@@ -61,20 +61,18 @@ img:hover {
 }
 .col {
   transition: 1s;
+  border-radius: 10px;
+  box-shadow: 4px 4px 12px 0px #afafaf;
 }
 .col:hover {
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
 }
 .card {
   border: none;
-  /* background-color: ; */
   color: rgb(15, 14, 14);
   text-align: center;
 }
 
-/* .btn {
-    position: ;
-} */
 .footer-menu {
   margin-top: 20px;
 }
@@ -89,12 +87,12 @@ img:hover {
   text-decoration: none;
   color: black;
   transition: 0.5s all ease-in-out;
+  border-radius: 5px;
+  padding: 5px;
 }
 .footer-menu ul li a:hover {
   color: white;
   background-color: black;
-  border-radius: 5px;
-  padding: 5px;
 }
 .footer-copyright {
   text-align: center;
