--- a/css/contact.css
+++ b/css/contact.css
@@ -11,80 +11,78 @@ ul {
 a {
   text-decoration: none;
 }
-   /* header part start */
-about-header-upper {
- margin: 20px 0px;
- 
-
+/* header part start */
+.about-header-upper {
+  padding: 20px;
 }
 .about-header-upper ul {
- display: flex;
- justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .about-header-upper ul li {
- padding: 0 10px;
+  padding: 0 10px;
 }
 .about-header-upper ul li a {
- color: black;
- transition: 0.5s all ease-in-out;
+  color: black;
+  transition: 0.5s all ease-in-out;
+  border-radius: 5px;
+  padding: 5px;
 }
 .about-header-upper a.active {
- background-color: black;
- color: white;
- border-radius: 5px;
- padding: 5px;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  padding: 5px;
 }
 .about-header-upper ul li a:hover {
- background-color: black;
- color: white;
- border-radius: 5px;
- padding: 5px;
+  background-color: black;
+  color: white;
 }
 /* header part end */
 
 /* main-contact-cody design start here */
 .main-contact-body {
- display: flex;
- justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .main-contact-body p {
- background-color: black;
- color: white;
- padding: 500px;
+  background-color: black;
+  color: white;
+  padding: 500px;
 }
 /* main-contact-cody design start end */
 /* footer part start */
 .footer-menu {
- margin: 20px;
+  margin: 20px;
 }
 .footer-menu ul {
- display: flex;
- justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .footer-menu ul li {
- padding: 0 10px;
+  padding: 0 10px;
 }
 .footer-menu ul li a {
- text-decoration: none;
- color: black;
- transition: 0.5s all ease-in-out;
+  text-decoration: none;
+  color: black;
+  transition: 0.5s all ease-in-out;
+  border-radius: 5px;
+  padding: 5px;
 }
 .footer-menu ul li a:hover {
- color: white;
- background-color: black;
- border-radius: 5px;
- padding: 5px;
+  color: white;
+  background-color: black;
 }
 .footer-copyright {
- text-align: center;
- margin-top: 20px;
- margin-bottom: 20px;
- color: black;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: black;
 }
 .footer-copyright a {
- color: blue;
+  color: blue;
 }
 .footer-copyright a:hover {
- color: red;
+  color: red;
 }
 /* footer part end */
