--- a/css/style.css
+++ b/css/style.css
@@ -1,130 +1,136 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
-#loader{
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    background: #fff url('../img/loading.gif') ;
-    background-position: center center;
-    background-repeat: no-repeat;
-    z-index: 9999;
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
+#loader {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  background: #fff url("../img/loading.gif");
+  background-position: center center;
+  background-repeat: no-repeat;
+  z-index: 9999;
 }
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Comfortaa', cursive;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Comfortaa", cursive;
 }
-ul{
-    list-style-type: none;
+ul {
+  list-style-type: none;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
 /* Header Part Start*/
 .navbar-nav .nav-link {
-    color: #fff;
+  color: #fff;
 }
-.navbar-brand img{
-    width: 48px;
+.navbar-brand img {
+  width: 48px;
 }
-header{
-    /* height: 100vh; */
-    overflow: hidden;
-    background: linear-gradient(to left, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url('../img/bg1.jpg');
-    background-size: cover;
-    background-position: center center;
+header {
+  /* height: 100vh; */
+  overflow: hidden;
+  background: linear-gradient(to left, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url("../img/bg1.jpg");
+  background-size: cover;
+  background-position: center center;
 }
-.search-icon, .menu-bar{
-    width: 26px;
+.search-icon,
+.menu-bar {
+  width: 26px;
 }
-.input-box{
-    padding: 4px 6px;
-    border-bottom: 2px solid #333;
+.input-box {
+  padding: 4px 6px;
+  border-bottom: 2px solid #333;
 }
-.input-box input{
-    border: 0;
-    width: 200px;
-    outline: 0;
-    background: transparent;
+.input-box input {
+  border: 0;
+  width: 200px;
+  outline: 0;
+  background: transparent;
 }
-.btn-custom{
-    color: #fff;
-    border: 2px solid #fff;
-    border-radius: 0;
-    font-weight: bold;
-    padding: 14px 26px;
-    font-size: 18px;
+.btn-custom {
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 0;
+  font-weight: bold;
+  padding: 14px 26px;
+  font-size: 18px;
 }
-.main-content{
-    padding: 150px 0px;
+.main-content {
+  padding: 150px 0px;
 }
-.hero-content{
-    padding-top: 50px;
+.hero-content {
+  padding-top: 50px;
 }
-.img-right{
-    text-align: right;
-    text-align: -moz-center;
+.img-right {
+  text-align: right;
+  text-align: -moz-center;
 }
 .slick-prev {
-    left: -30px;
+  left: -30px;
 }
-.slick-prev, .slick-next {
-    background: #333;
-    padding: 10px;
-    height: 38px;
-    width: 38px;
-    border-radius: 50%;
+.slick-prev,
+.slick-next {
+  background: #333;
+  padding: 10px;
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
 }
-.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus {
-    color: #333;
-    outline: none;
-    background: #333;
+.slick-prev:hover,
+.slick-prev:focus,
+.slick-next:hover,
+.slick-next:focus {
+  color: #333;
+  outline: none;
+  background: #333;
 }
-.slider-img{
-    width: 80%;
-    vertical-align: middle;
-}                  
+.slider-img {
+  width: 80%;
+  vertical-align: middle;
+}
 /* Header Part End*/
 
 /* Product page start  */
-#product img{
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
+#product img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
 }
 #product img:hover {
-    padding: 10px;
+  padding: 10px;
 }
 /* Product page end  */
 
-
 /* Footer part Start */
-footer{
-    background: #161b1f;
-    color: #fff;
+footer {
+  background: #161b1f;
+  color: #fff;
 }
-footer a{
-    color: #fff;    
+footer a {
+  color: #fff;
 }
-footer ul li{
-    margin: 10px 0px;
+footer ul li {
+  margin: 10px 0px;
 }
-footer a:hover{
-    text-decoration: none;
+footer a:hover {
+  text-decoration: none;
 }
-footer h2, footer h4{
-    font-weight: bold;
-    margin-bottom: 30px;
+footer h2,
+footer h4 {
+  font-weight: bold;
+  margin-bottom: 30px;
 }
-.footer-logo{
-    width: 40px;
-    margin-top: -10px;
+.footer-logo {
+  width: 40px;
+  margin-top: -10px;
 }
 /* Footer part End*/
 
 /* Feature Part */
-.feature-img{
-    width: 100px;
-    margin: 20px 0px;
+.feature-img {
+  width: 100px;
+  margin: 20px 0px;
 }
