--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,5 @@
 @media only screen and (max-width: 991px) {
-  .input-box {
-    width: 100%;
-  }
+    .main-content{
+        padding: 50px 0px;
+    }
 }
